--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ShopAble Fashion - AI-Powered Style & Rewards</title>
-    <meta name="description" content="Discover your perfect style with AI-powered fashion recommendations and earn rewards with every purchase. Shop curated looks and build your capsule wardrobe." />
+    <title>ShopAble Fashion - AI-Powered Style Assistant</title>
+    <meta name="description" content="Discover your perfect style with AI-powered fashion recommendations, personalized outfit building, and curated shopping experiences." />
     <meta name="author" content="ShopAble Fashion" />
-    <meta name="keywords" content="fashion, AI stylist, rewards, mobile shopping, style, wardrobe, outfits" />
 
-    <meta property="og:title" content="ShopAble Fashion - AI-Powered Style & Rewards" />
-    <meta property="og:description" content="Discover your perfect style with AI-powered fashion recommendations and earn rewards with every purchase." />
+    <meta property="og:title" content="ShopAble Fashion - AI-Powered Style Assistant" />
+    <meta property="og:description" content="Discover your perfect style with AI-powered fashion recommendations, personalized outfit building, and curated shopping experiences." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@shopable_fashion" />
+    <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
